--- a/result.html
+++ b/result.html
@@ -5,14 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
+/* ---- পূর্বের CSS একই থাকবে ---- */
 body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 20px; text-align:center; }
 a { color: #2980b9; text-decoration: none; }
 a:hover { text-decoration: underline; }
 #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
 .not-found { text-align: center; padding: 50px; color: #e74c3c; }
-
 .certificate-container { max-width: 900px; margin: 20px auto; background: #fff; border-radius: 15px; box-shadow: 0 12px 30px rgba(0,0,0,0.2); overflow: hidden; padding-bottom: 40px; position: relative; }
-
 .certificate-container::before {
   content: "";
   position: absolute; top: 50%; left: 50%; width: 500px; height: 500px;
@@ -22,27 +21,22 @@ a:hover { text-decoration: underline; }
   opacity: 0.08; filter: blur(1px); z-index: 0;
 }
 .certificate-container > * { position: relative; z-index: 1; }
-
 .lang-toggle { text-align: right; margin-bottom: 10px; }
 .lang-toggle button { padding: 5px 12px; margin-left: 5px; cursor:pointer; border-radius:5px; border:none; background:#2980b9; color:white; }
 
 .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
 .company-logo { max-height: 80px; object-fit: contain; }
-
 .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
 .profile-picture-container { flex: 0 0 150px; text-align: center; }
 .profile-picture { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid #2980b9; }
-
 .person-info { flex: 1; text-align:left; }
 .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; font-weight: bold; }
 .person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
 .person-info .company { font-size: 18px; color: #555; }
-
 .cert-details { margin: 20px; padding: 10px; }
 .detail-item { padding: 10px 0; border-bottom: 1px dashed #bdc3c7; font-size: 16px; display:flex; justify-content:space-between; }
 .detail-key { font-weight: bold; color: #34495e; }
 .detail-value { color: #2c3e50; }
-
 .cert-footer { display: flex; justify-content: space-between; align-items: center; margin: 20px; padding: 10px 20px; color: #7f8c8d; font-size: 14px; }
 .qr-code { width: 80px; height: 80px; }
 .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
@@ -50,15 +44,14 @@ a:hover { text-decoration: underline; }
 @media print { body { background-color: #fff; } .certificate-container { box-shadow: none; margin: 0; } 
 .certificate-container::before { opacity: 0.05; } 
 #loader, .not-found { display: none; } }
-
 @media (max-width: 600px) { .cert-body { flex-direction: column; align-items: center; text-align: center; } .person-info { text-align: center; } .cert-footer { flex-direction: column; gap: 10px; align-items: center; } .detail-item { flex-direction: column; text-align:center; } }
 </style>
 </head>
 <body>
 
 <div class="lang-toggle">
-  <button onclick="setLanguage('bn')">বাংলা</button>
-  <button onclick="setLanguage('en')">English</button>
+  <button onclick="loadCertificate('bn')">বাংলা</button>
+  <button onclick="loadCertificate('en')">English</button>
 </div>
 
 <div class="certificate-container" id="certificate-container">
@@ -73,14 +66,16 @@ a:hover { text-decoration: underline; }
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script>
-let currentLang = 'bn';
+const dataFiles = { 'bn':'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/foldername/databangla.json',
+                    'en':'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/foldername/dataenglish.json' };
 
-function setLanguage(lang) {
-    currentLang = lang;
-    // যদি ইতিমধ্যেই ডাটা লোড হয়ে থাকে, রেন্ডার করুন আবার
-    if(window.personData) displayCertificate(window.personData);
-    updateNotFoundText();
-}
+let currentLang = 'bn';
+let personData = null;
+const urlParams = new URLSearchParams(window.location.search);
+const regNumber = urlParams.get('reg');
+const certificateContainer = document.getElementById('certificate-container');
+const loader = document.getElementById('loader');
+const notFound = document.getElementById('not-found');
 
 function updateNotFoundText(){
     if(currentLang === 'bn'){
@@ -94,70 +89,67 @@ function updateNotFoundText(){
     }
 }
 
-document.addEventListener('DOMContentLoaded', function() {
-    const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/data.json';
-    const urlParams = new URLSearchParams(window.location.search);
-    const regNumber = urlParams.get('reg');
-    const certificateContainer = document.getElementById('certificate-container');
-    const loader = document.getElementById('loader');
-    const notFound = document.getElementById('not-found');
+function loadCertificate(lang){
+    currentLang = lang;
+    loader.style.display = 'block';
+    certificateContainer.style.display = 'block';
+    certificateContainer.innerHTML = '<div id="loader">লোড হচ্ছে...</div>';
+    notFound.style.display = 'none';
 
-    if (!regNumber) {
-        loader.style.display = 'none';
-        notFound.style.display = 'block';
-        updateNotFoundText();
-        return;
-    }
-
-    fetch(GITHUB_DATA_URL)
-      .then(response => { if (!response.ok) throw new Error('Network response was not ok'); return response.json(); })
+    fetch(dataFiles[lang])
+      .then(response => { if(!response.ok) throw new Error('Network error'); return response.json(); })
       .then(data => {
-        const person = data.find(item => item.registration_number && item.registration_number.toLowerCase() === regNumber.toLowerCase());
-        loader.style.display = 'none';
-        if (person) { 
-            window.personData = person; // save for language toggle
-            displayCertificate(person);
-        } else { certificateContainer.style.display = 'none'; notFound.style.display = 'block'; updateNotFoundText(); }
+          const person = data.find(item => item.registration_number && item.registration_number.toLowerCase() === regNumber.toLowerCase());
+          loader.style.display = 'none';
+          if(person){
+              personData = person;
+              displayCertificate(person);
+          } else {
+              certificateContainer.style.display = 'none';
+              notFound.style.display = 'block';
+              updateNotFoundText();
+          }
       })
-      .catch(error => { console.error('Fetch Error:', error); loader.style.display = 'none'; certificateContainer.innerHTML = '<p style="color:red;text-align:center;">Data could not be loaded. Please try again.</p>'; });
+      .catch(error => {
+          loader.style.display = 'none';
+          certificateContainer.innerHTML = '<p style="color:red;text-align:center;">Data could not be loaded. Please try again.</p>';
+          console.error(error);
+      });
+}
 
-    function displayCertificate(person) {
-        let detailsHtml = '';
-        if (person.details) {
-            for (const key in person.details) {
-                let displayKey = key;
-                if(currentLang === 'en' && person.details_en && person.details_en[key]) displayKey = person.details_en[key];
-                detailsHtml += `<div class="detail-item"><span class="detail-key">${displayKey}</span><span class="detail-value">${person.details[key]}</span></div>`;
-            }
+function displayCertificate(person){
+    let detailsHtml = '';
+    if(person.details){
+        for(const key in person.details){
+            detailsHtml += `<div class="detail-item"><span class="detail-key">${key}</span><span class="detail-value">${person.details[key]}</span></div>`;
         }
-
-        const name = (currentLang==='bn') ? person.name : (person.name_en || person.name);
-        const designation = (currentLang==='bn') ? person.designation : (person.designation_en || person.designation);
-        const company = (currentLang==='bn') ? person.company : (person.company_en || person.company);
-
-        certificateContainer.innerHTML = `
-          <header class="cert-header">
-            <img src="${person.logo_url || ''}?raw=true" alt="Company Logo" class="company-logo" onerror="this.style.display='none'">
-          </header>
-          <main class="cert-body">
-            <div class="profile-picture-container">
-              <img src="${person.photo_url || ''}?raw=true" alt="Profile Photo" class="profile-picture" onerror="this.style.display='none'">
-            </div>
-            <div class="person-info">
-              <h1 class="name">${name}</h1>
-              <p class="designation">${designation}</p>
-              <p class="company">${company}</p>
-            </div>
-          </main>
-          <section class="cert-details">${detailsHtml}</section>
-          <footer class="cert-footer">
-            <div class="reg-number">${currentLang==='bn'?'রেজিস্ট্রেশন নম্বর':'Registration No'}: ${person.registration_number || 'N/A'}</div>
-            <div id="qrcode" class="qr-code"></div>
-          </footer>
-        `;
-        new QRCode(document.getElementById("qrcode"), { text: window.location.href, width: 80, height: 80 });
     }
-});
+    certificateContainer.innerHTML = `
+      <header class="cert-header">
+        <img src="${person.logo_url || ''}?raw=true" alt="Company Logo" class="company-logo" onerror="this.style.display='none'">
+      </header>
+      <main class="cert-body">
+        <div class="profile-picture-container">
+          <img src="${person.photo_url || ''}?raw=true" alt="Profile Photo" class="profile-picture" onerror="this.style.display='none'">
+        </div>
+        <div class="person-info">
+          <h1 class="name">${person.name}</h1>
+          <p class="designation">${person.designation}</p>
+          <p class="company">${person.company}</p>
+        </div>
+      </main>
+      <section class="cert-details">${detailsHtml}</section>
+      <footer class="cert-footer">
+        <div class="reg-number">${currentLang==='bn'?'রেজিস্ট্রেশন নম্বর':'Registration No'}: ${person.registration_number || 'N/A'}</div>
+        <div id="qrcode" class="qr-code"></div>
+      </footer>
+    `;
+    new QRCode(document.getElementById("qrcode"), { text: window.location.href, width: 80, height: 80 });
+}
+
+// ডিফল্টে বাংলা লোড করুন
+if(regNumber) loadCertificate('bn');
+else { loader.style.display = 'none'; notFound.style.display = 'block'; updateNotFoundText(); }
 </script>
 </body>
 </html>
