--- a/result.html
+++ b/result.html
@@ -82,7 +82,7 @@ a:hover { text-decoration: underline; }
 <body>
 
 <!-- Back Button -->
-<button class="back-button" onclick="window.location.href='index.html'"> Home /button>
+<button class="back-button" onclick="window.location.href='index.html'"> Home </button>
 
 <div class="lang-toggle">
   <button onclick="loadCertificate('bn')">বাংলা</button>
