--- a/result.html
+++ b/result.html
@@ -288,7 +288,7 @@ async function generateMultiLanguagePdf() {
 }
 
 if (regNumber) {
-    loadCertificate('bn');
+    loadCertificate('en');
 } else {
     loader.style.display = 'none';
     downloadBtn.style.display = 'none';
