--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPI AsiaTel-Satisfaction is the key</title>
+    <title>GPI AsiaTel &mdash; Satisfaction is the key</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/main/7photo/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png
 ">
     <!-- Tailwind CSS CDN -->
