--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Admin Panel - GPI AsiaTel</title>
   <script>
-    const CONFIG_URL = "https://raw.githubusercontent.com/Hridoy398398/myapp-update/refs/heads/main/login.json";
+    const CONFIG_URL = "https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/data/config.json";
     let storedHash = "";
 
     async function loadConfig() {
