--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <title>Admin Panel - GPI AsiaTel</title>
   <script>
     const CONFIG_URL = "https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/data/config.json";
-    let storedHash = "";
+    let storedHash = "fb8e397d5ee127257d2c0c620ce9a7082898267fba6e0783ce54519c90a6ae82";
 
     async function loadConfig() {
       const res = await fetch(CONFIG_URL);
