--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             </div>
 
             <div class="flex items-center space-x-4">
-                <a href="/admin.html" class="contact-btn text-white font-semibold px-4 py-2 rounded-md">Admin</a>
+                <a href="/admin.html" class="contact-btn text-white font-semibold px-4 py-2 rounded-md">Login</a>
                 <a href="https://gpiasiatel.com.bd/contact-us/" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
             </div>
         </nav>
