--- a/result.html
+++ b/result.html
@@ -11,7 +11,7 @@
 
 <style>
 /* Existing styles */
-body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 20px; text-align:center; }
+body { font-family: 'SolaimanLipi', sans-serif; background: #FFFFFF; margin: 0; padding: 20px; text-align:center; }
 a { color: #2980b9; text-decoration: none; }
 a:hover { text-decoration: underline; }
 #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
