--- a/result.html
+++ b/result.html
@@ -30,7 +30,7 @@ a:hover { text-decoration: underline; }
 .lang-toggle button { padding: 5px 12px; margin-left: 5px; cursor:pointer; border-radius:5px; border:none; background:#2980b9; color:white; }
 .lang-toggle button:disabled { background: #555; cursor: not-allowed; }
 
-.cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
+.cert-header { background-color: #ffffff; padding: 20px; text-align: center; }
 .company-logo { max-height: 80px; object-fit: contain; }
 .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
 .profile-picture-container { flex: 0 0 150px; text-align: center; }
