--- a/index.html
+++ b/index.html
@@ -272,48 +272,36 @@
                         to Govt. & Non-Govt. GPI AsiaTel is fully equipped with self-owned tools required for any project related to Telecommunication and Power sector. 
                         It has already achieved the reputation as a reliable and quality sub-contractor among Vendors, investors, authorities and Operators.
                     </p>
-                    <!-- Company Info -->
-<p>
-    📄 TIN No – 185049338292 &nbsp; | &nbsp;
-    📄 VAT No – 17061044447 &nbsp; | &nbsp;
-    📄 BIN No – 0001 68803-0402 &nbsp; | &nbsp;
-    📄 Trade No – TRAD/DNCC/002168/2022
-</p>
+                    <p class="text-sm mt-2">
+                        <strong>TIN No</strong> – 185049338292 &nbsp; | &nbsp;
+                        <strong>VAT No</strong> – 17061044447 &nbsp; | &nbsp;
+                        <strong>BIN No</strong> – 0001 68803-0402 &nbsp; | &nbsp;
+                        <strong>Trade No</strong> – TRAD/DNCC/002168/2022
+                    </p>
 
-<!-- Contact Information -->
-<address>
-    📞 <a href="tel:+880173339707">+880173339707</a>, 
-    <a href="tel:+8801712049915">+8801712049915</a> &nbsp; | &nbsp;
-    ✉️ <a href="mailto:info@gpiasiatel.com.bd">info@gpiasiatel.com.bd</a>, 
-    <a href="mailto:tarik@gpiasiatel.com.bd">tarik@gpiasiatel.com.bd</a> &nbsp; | &nbsp;
-    📍 <b>Head Office:</b> Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207.
-</address>
-
-<!-- Social Links -->
-  <div class="flex space-x-3 mt-6">
+                    <div class="flex space-x-3 mt-6">
                         <a href="https://www.facebook.com/gpiasiatel/" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.linkedin.com/company/gpi-asiatel/" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://wa.link/ko4pe3" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-whatsapp"></i></a>
                     </div>
-
-<!-- CSS -->
-<style>
-.social-links a {
-    margin-right: 10px;
-    text-decoration: none;
-    color: #fff;
-    padding: 8px 12px;
-    border-radius: 4px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-.social-links .facebook { background: #3b5998; }
-.social-links .linkedin { background: #0077b5; }
-.social-links .whatsapp { background: #25D366; }
-</style>
-
                 </div>
 
+                <div>
+                    <ul class="space-y-2 text-sm">
+                        <li class="flex items-center space-x-2">
+                            <span>📞</span>
+                            <span>+8801733339707, +8801712049915</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <span>✉️</span>
+                            <span>info@gpiasiatel.com.bd, tarik@gpiasiatel.com.bd</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <span>📍</span>
+                            <span><b>Head Office:</b> Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207.</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-8">
