--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             object-fit: contain;
             width: 100%;
             height: 100%;
+            border-radius: 0.5rem;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
 
         /* Lightbox / Fullscreen image */
@@ -50,7 +52,7 @@
             display: none;
             position: fixed;
             top:0; left:0; right:0; bottom:0;
-            background: rgba(0,0,0,0.85);
+            background: rgba(0,0,0,0.95);
             justify-content: center;
             align-items: center;
             z-index: 9999;
@@ -79,11 +81,6 @@
             } else {
                 alert("দয়া করে একটি রেজিস্ট্রেশন নম্বর দিন!");
             }
-        }
-
-        function handleSearch() {
-            const fakeEvent = { preventDefault: () => {} };
-            searchCertificate(fakeEvent);
         }
 
         function openLightbox(src) {
