--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
         /* Slider animation */
         @keyframes slide {
             0% { transform: translateX(0); }
-            100% { transform: translateX(-50%); } /* Half of the full width to create a continuous loop */
+            100% { transform: translateX(-50%); }
         }
 
+        .slider-wrapper {
+            overflow: hidden;
+            width: 100vw;
+            margin-left: calc(50% - 50vw);
+        }
         .slider {
             display: flex;
             width: max-content;
@@ -104,7 +109,6 @@
                 const images = data.images && data.images.length > 0 ? data.images.slice(0, 14) : [];
                 const finalImages = images.length ? images : fallbackImages;
 
-                // Create a seamless loop by duplicating the images
                 const allImages = [...finalImages, ...finalImages];
 
                 allImages.forEach((url, index) => {
@@ -170,7 +174,7 @@
 
     <header class="bg-white shadow-md">
         <div class="header-top-bg text-white text-xs py-2">
-            <div class="container mx-auto px-4 flex justify-between items-center">
+            <div class="px-4 flex justify-between items-center">
                 <div class="flex items-center space-x-4">
                     <div class="flex items-center space-x-1">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" /></svg>
@@ -191,7 +195,7 @@
             </div>
         </div>
 
-        <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
+        <nav class="px-4 py-3 flex justify-between items-center">
             <a href="https://gpiasiatel.com.bd" id="logo-container">
                 <img src="https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/ca20f4b78f796a5f352677cd0e06aa9fdee4e938/foldername/GPI-AsiaTel-Logo-e1716128485650.png" alt="GPI AsiaTel Logo" class="h-10">
             </a>
@@ -211,7 +215,7 @@
     </header>
 
     <div class="bg-white py-4 border-b">
-        <div class="container mx-auto px-4">
+        <div class="px-4">
             <form onsubmit="searchCertificate(event)" class="max-w-3xl mx-auto flex items-center border-2 border-gray-300 rounded-md overflow-hidden">
                 <div class="px-3 py-2 bg-gray-100">
                     <select class="bg-transparent outline-none text-gray-600">
@@ -226,7 +230,7 @@
         </div>
     </div>
 
-    <main class="container mx-auto px-4 py-8">
+    <main class="px-4 py-8">
         <h2 class="text-2xl font-bold mb-4 text-center">Search Result</h2>
         <div id="searchResult" class="bg-white p-6 rounded-lg shadow-md min-h-[200px] flex items-center justify-center">
             <p class="text-gray-500">Enter a registration number to see the result.</p>
@@ -238,7 +242,7 @@
                     Our Works
                 </div>
             </div>
-            <div id="imageGridWrapper" class="overflow-hidden mt-10">
+            <div id="imageGridWrapper" class="slider-wrapper mt-10">
                 <div id="imageGrid" class="slider">
                 </div>
             </div>
@@ -251,7 +255,7 @@
                 </div>
             </div>
             <div class="text-center text-gray-600 mb-4">Our clients worldwide:</div>
-            <div id="clientGridWrapper" class="overflow-hidden mt-2">
+            <div id="clientGridWrapper" class="slider-wrapper mt-2">
                 <div id="clientGrid" class="slider">
                 </div>
             </div>
@@ -259,7 +263,7 @@
     </main>
 
     <footer class="footer-bg text-gray-200 pt-12">
-        <div class="container mx-auto px-4">
+        <div class="px-4">
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 pb-8 mb-8 border-b border-white/30">
                 <div class="lg:col-span-2">
                     <a href="https://gpiasiatel.com.bd">
