--- a/index.html
+++ b/index.html
@@ -275,33 +275,23 @@
                         It has already achieved the reputation as a reliable and quality sub-contractor among Vendors, investors, authorities and Operators.
                     </p>
                     <p class="text-sm mt-2">
-                        <strong>TIN No</strong> – 185049338292 &nbsp; | &nbsp;
-                        <strong>VAT No</strong> – 17061044447 &nbsp; | &nbsp;
-                        <strong>BIN No</strong> – 0001 68803-0402 &nbsp; | &nbsp;
+                        <strong>TIN No</strong> – 185049338292 &nbsp;  &nbsp;
+                        <strong>VAT No</strong> – 17061044447 &nbsp;  &nbsp;
+                        <strong>BIN No</strong> – 0001 68803-0402 &nbsp;  &nbsp;
                         <strong>Trade No</strong> – TRAD/DNCC/002168/2022
                     </p>
-
+                   </p>
+                    <p class="text-sm mt-2">
+                        <strong>📞</strong>  +8801733339707, +8801712049915 &nbsp;  &nbsp;
+                        <strong>✉️</strong>  info@gpiasiatel.com.bd, tarik@gpiasiatel.com.bd &nbsp;  &nbsp;
+                        <strong>📍</strong> – Head Office: Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207. &nbsp;  &nbsp;
+                    </p>
                     <div class="flex space-x-3 mt-6">
                         <a href="https://www.facebook.com/gpiasiatel/" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.linkedin.com/company/gpi-asiatel/" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://wa.link/ko4pe3" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
-
-                <div>
-                    <ul class="space-y-2 text-sm">
-                        <li class="flex items-center space-x-2">
-                            <span>📞</span>
-                            <span>+8801733339707, +8801712049915</span>
-                        </li>
-                        <li class="flex items-center space-x-2">
-                            <span>✉️</span>
-                            <span>info@gpiasiatel.com.bd, tarik@gpiasiatel.com.bd</span>
-                        </li>
-                        <li class="flex items-center space-x-2">
-                            <span>📍</span>
-                            <span><b>Head Office:</b> Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207.</span>
-                        </li>
                     </ul>
                 </div>
             </div>
