--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 
             <div class="flex items-center space-x-4">
                 <a href="https://gpiasiatel.com.bd/contact-us/" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
+                <a href="login.html" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Login</a>
             </div>
         </nav>
     </header>
@@ -275,16 +276,15 @@
                         It has already achieved the reputation as a reliable and quality sub-contractor among Vendors, investors, authorities and Operators.
                     </p>
                     <p class="text-sm mt-2">
-                        <strong>TIN No</strong> – 185049338292 &nbsp;  &nbsp;
-                        <strong>VAT No</strong> – 17061044447 &nbsp;  &nbsp;
-                        <strong>BIN No</strong> – 0001 68803-0402 &nbsp;  &nbsp;
+                        <strong>TIN No</strong> – 185049338292 &nbsp;  &nbsp;
+                        <strong>VAT No</strong> – 17061044447 &nbsp;  &nbsp;
+                        <strong>BIN No</strong> – 0001 68803-0402 &nbsp;  &nbsp;
                         <strong>Trade No</strong> – TRAD/DNCC/002168/2022
                     </p>
-                   </p>
                     <p class="text-sm mt-2">
-                        <strong>📞</strong>  +8801733339707, +8801712049915 &nbsp;  &nbsp;
-                        <strong>✉️</strong>  info@gpiasiatel.com.bd, tarik@gpiasiatel.com.bd &nbsp;  &nbsp;
-                        <strong>📍</strong> – Head Office: Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207. &nbsp;  &nbsp;
+                        <strong>📞</strong>  +8801733339707, +8801712049915 &nbsp;  &nbsp;
+                        <strong>✉️</strong>  info@gpiasiatel.com.bd, tarik@gpiasiatel.com.bd &nbsp;  &nbsp;
+                        <strong>📍</strong> – Head Office: Plot# 711/4, Road# 11, Baitul Aman Housing Society, Adabor, Shyamoli, Dhaka-1207. &nbsp;  &nbsp;
                     </p>
                     <div class="flex space-x-3 mt-6">
                         <a href="https://www.facebook.com/gpiasiatel/" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-facebook-f"></i></a>
@@ -292,8 +292,8 @@
                         <a href="https://wa.link/ko4pe3" class="bg-white text-green-600 p-2 rounded"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
-                    </ul>
-                </div>
+                <div>
+                    </div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-8">
